[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name="advect1d"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
  "spacepy",
  "matplotlib",
  "numpy"
]
dynamic=["version"]

[tool.setuptools_scm]
version_file = "advect1d/_version.py"

[tool.setuptools]
packages = ["advect1d"]
